--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "typescript": "^4.5.5"
   },
   "scripts": {
-    "start": "node index.js",
-    "prestart": "tsc"
+    "start": "tsc-watch --onSuccess \"node dist/index.js \" "
+  },
+  "devDependencies": {
+    "tsc-watch": "^4.6.0"
   }
 }
